Added static directory from example site

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://evelyn-karah.vip/'
+# baseURL = 'https://evelyn-karah.vip/'
 languageCode = 'en-us'
 theme = "blist"
 title = "Evelyn Karah's Playtoy"
