--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "hugo server --disableFastRender",
     "start-codespaces": "hugo server -D --baseUrl=https://evelyn-karah-congenial-spoon-qrqq64vq9pwh679p-1313.preview.app.github.dev/ --appendPort=false --disableFastRender",
     "start-examplesite": "hugo server -s exampleSite --themesDir=../.. --disableFastRender",
+    "start-examplesite-codespaces": "hugo server -s exampleSite --themesDir=../.. --baseUrl=https://evelyn-karah-congenial-spoon-qrqq64vq9pwh679p-1313.preview.app.github.dev/ --disableFastRender",
     "build-examplesite": "NODE_ENV=production hugo -s exampleSite --themesDir=../.. --gc",
     "build": "NODE_ENV=production hugo --gc"
   },
